--- a/app/views/spud/admin/banner_sets/_form.html.erb
+++ b/app/views/spud/admin/banner_sets/_form.html.erb
@@ -3,28 +3,31 @@
   <%= error_messages_for(f.object) %>
 
   <fieldset>
-    <div class="control-group">
-      <%= f.label :name, "Name",:class => "control-label" %>
-      <div class="controls">
-        <%= f.text_field :name %>
+    <div class="form-group">
+      <%= f.label :name, "Name",:class => "control-label col-sm-4" %>
+      <div class="col-sm-8">
+        <%= f.text_field :name, :class => "form-control" %>
       </div>
     </div>
-    <div class="control-group">
-      <%= f.label :width, "Width", :class => "control-label" %>
-      <div class="controls">
-        <%= f.text_field :width %>
+    <div class="form-group">
+      <%= f.label :width, "Width", :class => "control-label col-sm-4" %>
+      <div class="col-sm-8">
+        <%= f.text_field :width, :class => "form-control" %>
       </div>
     </div>
-    <div class="control-group">
-      <%= f.label :height, "Height", :class => "control-label" %>
-      <div class="controls">
-        <%= f.text_field :height %>
+    <div class="form-group">
+      <%= f.label :height, "Height", :class => "control-label col-sm-4" %>
+      <div class="col-sm-8">
+        <%= f.text_field :height, :class => "form-control" %>
       </div>
     </div>
-    <div class="control-group">
-      <%= f.label :cropped, "Cropped", :class => "control-label" %>
-      <div class="controls">
-        <%= f.check_box :cropped %>
+    <div class="form-group">
+      <%= f.label :cropped, "Cropped", :class => "control-label col-sm-4" %>
+      <div class="col-sm-8">
+        <label class="checkbox">
+          <%= f.check_box :cropped %>  
+        </label>
+        
       </div>
     </div>
   </fieldset>
