--- a/app/views/spud/admin/banners/_form.html.erb
+++ b/app/views/spud/admin/banners/_form.html.erb
@@ -3,37 +3,37 @@
   <%= error_messages_for(f.object) %>
 
   <fieldset>
-    <div class="control-group">
-      <%= f.label :link_to, 'Link to', :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :link_to %>
+    <div class="form-group">
+      <%= f.label :link_to, 'Link to', :class => 'control-label col-sm-4' %>
+      <div class="col-sm-8">
+        <%= f.text_field :link_to, :class => "form-control" %>
       </div>
     </div>
-    <div class="control-group">
-      <%= f.label :link_target, 'Open Link in', :class => 'control-label' %>
-      <div class="controls">
+    <div class="form-group">
+      <%= f.label :link_target, 'Open Link in', :class => 'control-label col-sm-4' %>
+      <div class="col-sm-8">
         <%= f.select :link_target, options_for_select([
           ['Same Window', '_self'],
           ['New Window', '_blank']
-        ], @banner.link_target) %>
+        ], @banner.link_target),{},{:class => "form-control"} %>
       </div>
     </div>
-    <div class="control-group">
-      <%= f.label :title, 'Image Title', :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :title %>
+    <div class="form-group">
+      <%= f.label :title, 'Image Title', :class => 'control-label col-sm-4' %>
+      <div class="col-sm-8">
+        <%= f.text_field :title, :class => "form-control" %>
       </div>
     </div>
-    <div class="control-group">
-      <%= f.label :alt, 'Alt Text', :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :alt %>
+    <div class="form-group">
+      <%= f.label :alt, 'Alt Text', :class => 'control-label col-sm-4' %>
+      <div class="col-sm-8">
+        <%= f.text_field :alt, :class => "form-control" %>
       </div>
     </div>
-    <div class="control-group">
-      <%= f.label :banner, 'Banner', :class => 'control-label' %>
-      <div class="controls">
-        <%= f.file_field :banner %>
+    <div class="form-group">
+      <%= f.label :banner, 'Banner', :class => 'control-label col-sm-4' %>
+      <div class="col-sm-8">
+        <%= f.file_field :banner, :class => "form-control" %>
       </div>
     </div>
   </fieldset>
